--- a/assets/user_settings.json
+++ b/assets/user_settings.json
@@ -1,17 +1,18 @@
 {
     "BOARD_POSITION": [
-        250,
-        70
+        426,
+        89
     ],
     "BOARD_RESOLUTION": [
         10,
         20
     ],
-    "CELLSIZE": 23,
-    "CONTROL": 0,
+    "CELLSIZE": 29,
+    "CONTROL": 1,
     "FPS": 30,
     "HIGHSCORES": [],
     "PADDING": 2,
-    "WINDOW_HEIGHT": 600,
-    "WINDOW_WIDTH": 800
+    "VOLUME": 80,
+    "WINDOW_HEIGHT": 768,
+    "WINDOW_WIDTH": 1366
 }
