--- a/assets/user_settings.json
+++ b/assets/user_settings.json
@@ -1,18 +1,19 @@
 {
     "BOARD_POSITION": [
-        250,
-        70
+        600,
+        126
     ],
     "BOARD_RESOLUTION": [
         10,
         20
     ],
-    "CELLSIZE": 23,
+    "CELLSIZE": 41,
     "CONTROL": 0,
     "FPS": 30,
     "HIGHSCORES": [],
     "PADDING": 2,
     "VOLUME": 100,
-    "WINDOW_HEIGHT": 600,
-    "WINDOW_WIDTH": 800
+    "WINDOWED": false,
+    "WINDOW_HEIGHT": 1080,
+    "WINDOW_WIDTH": 1920
 }
