--- a/assets/user_settings.json
+++ b/assets/user_settings.json
@@ -10,10 +10,16 @@
     "CELLSIZE": 41,
     "CONTROL": 0,
     "FPS": 30,
-    "HIGHSCORES": [],
+    "HIGHSCORES": [
+        0,
+        0,
+        0,
+        0,
+        0
+    ],
     "PADDING": 2,
     "VOLUME": 100,
-    "WINDOWED": false,
+    "WINDOWED": true,
     "WINDOW_HEIGHT": 1080,
     "WINDOW_WIDTH": 1920
 }
