--- a/assets/user_settings.json
+++ b/assets/user_settings.json
@@ -1,13 +1,13 @@
 {
     "BOARD_POSITION": [
-        600,
-        126
+        426,
+        89
     ],
     "BOARD_RESOLUTION": [
         10,
         20
     ],
-    "CELLSIZE": 41,
+    "CELLSIZE": 29,
     "CONTROL": 0,
     "FPS": 30,
     "HIGHSCORES": [
@@ -18,8 +18,8 @@
         0
     ],
     "PADDING": 2,
-    "VOLUME": 100,
-    "WINDOWED": true,
-    "WINDOW_HEIGHT": 1080,
-    "WINDOW_WIDTH": 1920
+    "VOLUME": 0,
+    "WINDOWED": false,
+    "WINDOW_HEIGHT": 768,
+    "WINDOW_WIDTH": 1366
 }
