Melhorias na personalização de controle e mudanças na main

--- a/assets/user_settings.json
+++ b/assets/user_settings.json
@@ -20,12 +20,13 @@
     ],
     "FPS": 30,
     "HIGHSCORES": [
-        94210,
-        82661,
-        66196,
-        32526,
-        25978
+        0,
+        0,
+        0,
+        0,
+        0
     ],
+    "LOG": "",
     "PADDING": 2,
     "VOLUME": 10,
     "WINDOWED": true,
