--- a/assets/user_settings.json
+++ b/assets/user_settings.json
@@ -1,18 +1,22 @@
 {
     "BOARD_POSITION": [
-        320,
-        67
+        426,
+        89
     ],
     "BOARD_RESOLUTION": [
         10,
         20
     ],
-    "CELLSIZE": 23,
-    "CONTROL": 1,
+    "CELLSIZE": 29,
+    "CONTROL": 0,
     "COOPBGIMAGE": 0,
     "COOPCONTROLS": [
         0,
         5
+    ],
+    "COOPSKINS": [
+        0,
+        0
     ],
     "CUSTOM_CONTROLS": [
         87,
@@ -32,9 +36,10 @@
     ],
     "LOG": [],
     "PADDING": 2,
+    "SKIN": 0,
     "SOLOBGIMAGE": 0,
     "VOLUME": 100,
-    "WINDOWED": true,
-    "WINDOW_HEIGHT": 576,
-    "WINDOW_WIDTH": 1024
+    "WINDOWED": false,
+    "WINDOW_HEIGHT": 768,
+    "WINDOW_WIDTH": 1366
 }
