--- a/assets/user_settings.json
+++ b/assets/user_settings.json
@@ -18,6 +18,14 @@
         90,
         67
     ],
+    "HIGHLEVELS": [
+        0,
+        0,
+        0,
+        0,
+        0
+    ],
+    "LOG": [],
     "HIGHSCORES": [
         0,
         0,
@@ -25,7 +33,7 @@
         0,
         0
     ],
-    "LOG": "",
+    "LOG": [],
     "PADDING": 2,
     "VOLUME": 100,
     "WINDOWED": true,
